# nsnotify

./: CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
notify/broker/: frame.py  segments.py  server.py  session.py
notify/cli/: install.py  led_report.py
notify/harness/: vibe.py
notify/transport/: ble_tx.py
tests/: test_audit_fixes.py  test_frame.py  test_installer.py  test_segments.py
