[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nimbus-notify"
version = "1.3.1"
description = "Host broker that watches your AI coding sessions (Claude Code, Codex, Mistral Vibe) and pushes live status to a physical LED ring / e-ink device over a documented wire protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Roy Darnell" },
]
keywords = ["claude-code", "codex", "mistral-vibe", "led", "notifier", "hooks", "ble", "serial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyserial>=3.5",
    "watchdog>=4.0",
    "aiohttp>=3.9",
    "bleak>=0.22",
]

[project.urls]
Homepage = "https://github.com/ristllin/nimbus-notify"
Repository = "https://github.com/ristllin/nimbus-notify"
Changelog = "https://github.com/ristllin/nimbus-notify/blob/main/CHANGELOG.md"

[project.scripts]
led-report = "notify.cli.led_report:main"
nimbus-notify-broker = "notify.broker.server:main"
nimbus-notify = "notify.cli.install:main"

[tool.hatch.build.targets.wheel]
packages = ["notify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
